# GhostType

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
ghosttype/: CLAUDE.md  Package.swift  project.yml
ghosttype/agentcore/: Dockerfile  agent.py  agentcore_app.py  pyproject.toml  server.py
ghosttype/agentcore/prompts/: chat.txt
ghosttype/backend/: PLAN.md  agent.py  agent_registry.py  browser_context.py  config.py  mcp_config.json  mcp_manager.py  message_builder.py  pyproject.toml  server.py  stdio_server.py  tool_registry.py
ghosttype/backend/agents/: agents.yaml
ghosttype/backend/prompts/: chat.txt  coding.txt  email.txt  system.txt
ghosttype/backend/tests/: test_agent.py  test_agent_registry.py  test_browser_context.py  test_browser_http.py  test_config.py  test_mcp_manager.py  test_memory_tools.py  test_message_builder.py  test_server.py  test_stdio_server.py  test_tool_registry.py
ghosttype/backend/tools/: memory_tools.py  text_tools.py
testsprite_tests/: TC001_health_check_api_returns_server_status_and_model_info.py  TC002_websocket_generate_streams_tokens_and_completes_successfully.py  TC003_websocket_generate_handles_malformed_json_with_error_message.py  TC004_websocket_generate_supports_cancellation_of_in_progress_generation.py  TC005_websocket_generate_cancel_without_active_generation_returns_error_or_noop.py  TC006_websocket_generate_supports_new_conversation_reset.py  TC007_websocket_generate_handles_closed_connection_on_new_conversation_reset.py  TC008_websocket_generate_builds_messages_based_on_mode_and_context.py  standard_prd.json  (+3 more)
(+72 files in other folders)
